# pzexeconfig-installer

./: Cargo.toml  LICENSE.md  README.md  build.rs
.github/workflows/: rust-clippy.yml  rust.yml
src/: install.rs  overwrite.rs
